--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,9 @@
 
     <Button
         android:id="@+id/btnEstudiar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_width="207dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="60dp"
         android:backgroundTint="#0AB38C"
         android:text="Estudiar Ingles"
         android:textAlignment="center"
@@ -22,9 +22,9 @@
 
     <Button
         android:id="@+id/btnBuscar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_width="206dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="#0AB38C"
         android:text="Buscar por palabra"
         android:textAlignment="center"
@@ -70,8 +70,8 @@
 
     <Button
         android:id="@+id/btnAñadir"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="207dp"
+        android:layout_height="51dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#0AB38C"
         android:onClick="añadir"
@@ -79,7 +79,6 @@
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnEstudiar" />
 
