--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="52dp"
         android:layout_marginTop="60dp"
         android:backgroundTint="#0AB38C"
+        android:onClick="aprender"
         android:text="Estudiar Ingles"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -26,7 +27,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="#0AB38C"
-        android:text="Buscar por palabra"
+        android:text="Buscar"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
