--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
         android:layout_height="52dp"
         android:layout_marginTop="60dp"
         android:backgroundTint="#0AB38C"
-        android:onClick="aprender"
         android:text="Estudiar Ingles"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -32,7 +31,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnAñadir" />
+        app:layout_constraintTop_toBottomOf="@+id/btnAnnadir" />
 
     <TextView
         android:id="@+id/textView"
@@ -70,12 +69,11 @@
         app:layout_constraintVertical_bias="0.104" />
 
     <Button
-        android:id="@+id/btnAñadir"
+        android:id="@+id/btnAnnadir"
         android:layout_width="207dp"
         android:layout_height="51dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#0AB38C"
-        android:onClick="añadir"
         android:text="Añadir o modificar"
         android:textAlignment="center"
         android:textStyle="bold"
