--- a/app/src/main/res/layout/activity_annadir.xml
+++ b/app/src/main/res/layout/activity_annadir.xml
@@ -7,6 +7,50 @@
     android:background="#303030">
 
     <EditText
+        android:id="@+id/txtAnnadirPalabraIng"
+        android:layout_width="267dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="4dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textAlignment="viewStart"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <EditText
+        android:id="@+id/txtAnnadirPalabraEsp"
+        android:layout_width="267dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="48dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textAlignment="viewStart"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="63dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="36dp"
+        android:enabled="false"
+        android:forceHasOverlappingRendering="false"
+        android:text="Añadir"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <EditText
         android:id="@+id/txtModificar2"
         android:layout_width="267dp"
         android:layout_height="42dp"
@@ -56,7 +100,7 @@
         android:id="@+id/textView6"
         android:layout_width="93dp"
         android:layout_height="20dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="28dp"
         android:enabled="false"
         android:forceHasOverlappingRendering="false"
         android:text="Modificar"
@@ -66,53 +110,21 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtAñadir" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="63dp"
-        android:layout_height="21dp"
-        android:layout_marginTop="72dp"
-        android:enabled="false"
-        android:forceHasOverlappingRendering="false"
-        android:text="Añadir"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.112"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/btnAñadirPalabra" />
 
     <Button
         android:id="@+id/btnAñadirPalabra"
         android:layout_width="60dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="88dp"
         android:backgroundTint="#0AB38C"
         android:text="Ok"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/txtAñadir"
-        app:layout_constraintTop_toTopOf="@+id/txtAñadir" />
-
-    <EditText
-        android:id="@+id/txtAñadir"
-        android:layout_width="267dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="4dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textAlignment="viewStart"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.27"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/txtAnnadirPalabraEsp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -129,20 +141,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.146" />
+        app:layout_constraintVertical_bias="0.024" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnAtras"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:backgroundTint="#0AB38C"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <RadioGroup
+        android:layout_width="149dp"
+        android:layout_height="78dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnAñadirPalabra"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023"
-        app:srcCompat="?attr/actionModeCloseDrawable" />
+        app:layout_constraintTop_toBottomOf="@+id/txtAnnadirPalabraEsp"
+        app:layout_constraintVertical_bias="1.0">
+
+        <RadioButton
+            android:id="@+id/radioBtnPalabra"
+            android:layout_width="148dp"
+            android:layout_height="39dp"
+            android:text="Palabra"
+            android:textColor="#FFFFFF" />
+
+        <RadioButton
+            android:id="@+id/radioBtnExpresion"
+            android:layout_width="148dp"
+            android:layout_height="39dp"
+            android:text="Expresion"
+            android:textColor="#FFFFFF" />
+    </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
