--- a/app/src/main/res/layout/activity_buscar.xml
+++ b/app/src/main/res/layout/activity_buscar.xml
@@ -9,7 +9,8 @@
     <TextView
         android:id="@+id/textView7"
         android:layout_width="379dp"
-        android:layout_height="71dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="96dp"
         android:enabled="false"
         android:forceHasOverlappingRendering="false"
         android:text="Buscar por filtrado"
@@ -17,11 +18,9 @@
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.146" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAtras2"
@@ -89,7 +88,7 @@
         app:layout_constraintHorizontal_bias="0.535"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-        app:layout_constraintVertical_bias="0.196" >
+        app:layout_constraintVertical_bias="0.196">
 
         <TextView
             android:id="@+id/textView14"
@@ -159,6 +158,20 @@
             android:textColor="#FFFFFF"
             tools:layout_editor_absoluteX="52dp"
             tools:layout_editor_absoluteY="424dp" />
+
     </RadioGroup>
+
+    <ListView
+        android:id="@+id/listViewPalabras"
+        android:layout_width="250dp"
+        android:layout_height="75dp"
+        android:background="#FFFFFF"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.024" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
